--- a/CTCOffice/CTCOffice/CTCOffice.csproj
+++ b/CTCOffice/CTCOffice/CTCOffice.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Route.cs" />
     <Compile Include="RoutesForm.cs">
       <SubType>Form</SubType>
     </Compile>
