--- a/CTCOffice/CTCOffice/CTCOffice.csproj
+++ b/CTCOffice/CTCOffice/CTCOffice.csproj
@@ -80,6 +80,12 @@
     </Compile>
     <Compile Include="TrackSegment.cs" />
     <Compile Include="Train.cs" />
+    <Compile Include="TrainDispatch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrainDispatch.Designer.cs">
+      <DependentUpon>TrainDispatch.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CTC.resx">
       <DependentUpon>CTC.cs</DependentUpon>
     </EmbeddedResource>
@@ -103,6 +109,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TestingForm.resx">
       <DependentUpon>TestingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TrainDispatch.resx">
+      <DependentUpon>TrainDispatch.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
