Changes for system prototype
Redesign of routes plus module integration

--- a/CTCOffice/CTCOffice/CTCOffice.csproj
+++ b/CTCOffice/CTCOffice/CTCOffice.csproj
@@ -113,6 +113,7 @@
     <EmbeddedResource Include="TrainDispatch.resx">
       <DependentUpon>TrainDispatch.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram3.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
