--- a/RCS/RCS/RCS.csproj
+++ b/RCS/RCS/RCS.csproj
@@ -126,6 +126,47 @@
     <Compile Include="..\..\TrackModel\TrackModelForm.Designer.cs">
       <Link>TrackModel\TrackModelForm.Designer.cs</Link>
     </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainController 2.cs">
+      <Link>TrainController\TrainController 2.cs</Link>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainController 3.cs">
+      <Link>TrainController\TrainController 3.cs</Link>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainController 4.cs">
+      <Link>TrainController\TrainController 4.cs</Link>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainController 5.cs">
+      <Link>TrainController\TrainController 5.cs</Link>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainController.cs">
+      <Link>TrainController\TrainController.cs</Link>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainControllerForm 2.cs">
+      <Link>TrainController\TrainControllerForm 2.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainControllerForm 3.cs">
+      <Link>TrainController\TrainControllerForm 3.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainControllerForm 4.cs">
+      <Link>TrainController\TrainControllerForm 4.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainControllerForm.cs">
+      <Link>TrainController\TrainControllerForm.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainControllerForm.Designer.cs">
+      <Link>TrainController\TrainControllerForm.Designer.cs</Link>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainControllerUserInterface.cs">
+      <Link>TrainController\TrainControllerUserInterface.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\..\TrainController\TrainController\TrainControllerUserInterface.Designer.cs">
+      <Link>TrainController\TrainControllerUserInterface.Designer.cs</Link>
+    </Compile>
     <Compile Include="RCS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +175,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrainModel\Constants.cs" />
+    <Compile Include="TrainModel\GeneralTrainInformation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrainModel\GeneralTrainInformation.Designer.cs" />
+    <Compile Include="TrainModel\Train.cs" />
+    <Compile Include="TrainModel\TrainDatabase.cs" />
+    <Compile Include="TrainModel\TrainModel.cs" />
+    <Compile Include="TrainModel\TrainModelForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrainModel\TrainModelForm.Designer.cs" />
     <EmbeddedResource Include="..\..\CTCOffice\CTCOffice\CTC.resx">
       <Link>CTC\CTC.resx</Link>
     </EmbeddedResource>
@@ -158,6 +211,9 @@
     <EmbeddedResource Include="..\..\TrackModel\TrackModelForm.resx">
       <Link>TrackModel\TrackModelForm.resx</Link>
     </EmbeddedResource>
+    <EmbeddedResource Include="..\..\TrainController\TrainController\TrainControllerUserInterface.resx">
+      <Link>TrainController\TrainControllerUserInterface.resx</Link>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -171,6 +227,8 @@
     <EmbeddedResource Include="RCS.resx">
       <DependentUpon>RCS.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="TrainModel\GeneralTrainInformation.resx" />
+    <EmbeddedResource Include="TrainModel\TrainModelForm.resx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
